# pilates_project_finetuned_model

./: Dockerfile-2.txt  LICENSE  README.md  app.py  combined_data.json  pyproject.toml  test_env.py
